[gd_scene load_steps=4 format=3 uid="uid://2rye1ajle5pa"]

[ext_resource type="Script" path="res://actors/enemy.gd" id="1_tvxf6"]
[ext_resource type="Texture2D" uid="uid://dboofuom771qa" path="res://resources/Enemy.png" id="2_n63ae"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dwytb"]
radius = 18.0
height = 50.0

[node name="SimpleRandomEnemy" type="CharacterBody2D"]
collision_mask = 3
motion_mode = 1
script = ExtResource("1_tvxf6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dwytb")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.8, 1)
texture = ExtResource("2_n63ae")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="bullet_hit" from="." to="." method="_on_bullet_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
